# TFM-LauraGonzalez

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: ADME_Sol_rdkit.csv  ADME_hPPB_rdkit.csv  ADME_rPPB_rdkit.csv
docs/: mkdocs.yml
docs/docs/: index.md
models/: ADME_HLM_lightgbm.pkl  ADME_MDR1_ER_lightgbm.pkl  ADME_RLM_lightgbm.pkl  ADME_Sol_lightgbm.pkl  ADME_hPPB_lightgbm.pkl  ADME_rPPB_lightgbm.pkl
reports/: table1_reproduced.csv
reports/results/: final_results.csv  lightgbm_replication_results.csv
reports/results/llm/: ADME_HLM_biomedical_gpt-4.1-mini.csv  ADME_MDR1_ER_biomedical_gpt-4.1-mini.csv  ADME_RLM_biomedical_gpt-4.1-mini.csv  ADME_Sol_biomedical_gpt-4.1-mini.csv  ADME_hPPB_biomedical_gpt-4.1-mini.csv  ADME_rPPB_biomedical_gpt-4.1-mini.csv
reports/shap/ADME_HLM/data/: shap_importance.csv
reports/shap/ADME_MDR1_ER/data/: shap_importance.csv  shap_values.npy
reports/shap/ADME_RLM/data/: shap_importance.csv
reports/shap/ADME_Sol/data/: shap_importance.csv  shap_values.npy
reports/shap/ADME_hPPB/data/: shap_importance.csv  shap_values.npy
reports/shap/ADME_rPPB/data/: shap_importance.csv  shap_values.npy
reports/shap/analysis/: correlation_values.csv
scripts/: build_all.py  main.py  sanity_check.py
src/analysis/: reproduce_table1.py  shap_postprocessing.py
src/data/: build_dataset.py  sanity.py
src/llm/: explanation_generator.py  llm_client.py  prompt_builder.py
src/modeling/: evaluate.py  shap_analysis.py  train_lightgbm.py
