[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "human_understandable_explanations_of_machine_learning_predictions_in_biomedical_applications"
version = "0.0.1"
description = "MDS TFM"
authors = [
  { name = "Laura Gonzalez" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["human_understandable_explanations_of_machine_learning_predictions_in_biomedical_applications"]
include = ["pyproject.toml", "human_understandable_explanations_of_machine_learning_predictions_in_biomedical_applications/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["human_understandable_explanations_of_machine_learning_predictions_in_biomedical_applications"]
force-sort-within-sections = true

